fix selected tabs too dark

--- a/src/components/_additional-styles.scss
+++ b/src/components/_additional-styles.scss
@@ -9,6 +9,11 @@
     color: var(--channels-default);
   }
 
+  // create thread popout
+  .header-1VS4tm .tabBar-31Wimb .tab-PQvTH4.active-30vPlA, .list-wek7hJ .tabBar-wS4pjJ .tab-17bjMB.active-3JUHqX {
+    background-color: var(--background-modifier-selected);
+  }
+
   // usernames bolder in chat
   .username-1A8OIy {
     font-weight: 500;
